--- a/10.Introducing.CSS.css
+++ b/10.Introducing.CSS.css
@@ -46,6 +46,10 @@ h1+p {
     font-size: 25;
 }
 
+h3+p {
+    font-size: 25 !important;
+}
+
 /*
  * Matches an element that is a sibling of another, although it does not have to be the directly preceding element.
  */
