--- a/10.Introducing.CSS.css
+++ b/10.Introducing.CSS.css
@@ -2,6 +2,10 @@
     color: #ff0000
 }
 
+body {
+    font-family: Courier
+}
+
 h1, h2 {
     font-family: Arial
 }
@@ -11,6 +15,7 @@ h1, h2 {
  */
 .Pig {
     color: #00ff00;
+    font-family: inherit;
 }
 
 P.Monkey {
